Use conda environment yaml's for training-tuning-scripts (#1256)
- Replace `requirements.txt`files (pip) with `requirements.yml` (conda environment).
- Update dependency versions.

Closes #1226
Closes #1227

## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - Eli Fajardo (https://github.com/efajardo-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1256

--- a/models/training-tuning-scripts/phishing-models/requirements.yml
+++ b/models/training-tuning-scripts/phishing-models/requirements.yml
@@ -16,18 +16,15 @@
 channels:
   - rapidsai
   - nvidia
-  - dglteam/label/cu118
   - pytorch
   - conda-forge
 dependencies:
-  - click>=8
-  - cuml=23.06
-  - dgl
+  - cudf=23.06
   - jupyterlab
-  - matplotlib
+  - onnx
+  - python=3.10
   - pytorch-cuda=11.8
   - pytorch=2.0.1
   - scikit-learn=1.2.2
   - tqdm=4
-  - torchmetrics
-  - xgboost
+  - transformers
