--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -253,7 +253,7 @@ dependencies:
           - elasticsearch==8.9.0
           - feedparser=6.0.10
           - grpcio=1.59
-          - mlflow=2.9.2
+          - mlflow>=2.10.0,<3
           - networkx=2.8.8
           - nvtabular=23.08.00
           - pydantic
@@ -301,7 +301,7 @@ dependencies:
           - dask=2023.12.1
           - distributed=2023.12.1
           - kfp
-          - mlflow=2.9.2
+          - mlflow>=2.10.0,<3
           - papermill=2.4.0
           - s3fs=2023.12.2
 
